Fix too big spacing between header and container on mobile for guests

--- a/resources/stylesheets/style.scss
+++ b/resources/stylesheets/style.scss
@@ -44,6 +44,10 @@ section {
 .container {
     padding-top: calc(108px + 1rem);
     padding-bottom: 1rem;
+
+    &.guest {
+        padding-top: calc(57px + 1rem);
+    }
 }
 
 .dropdown-menu {
